--- a/scss/_keyframes.scss
+++ b/scss/_keyframes.scss
@@ -27,20 +27,20 @@
 }
 
 @keyframes wiggle {
-  0%, 20%, 60%, 100% {transform: rotate(1deg);}
-    40% {transform: rotate(2deg);}
-    80% {transform: rotate(-1deg);}
+  0%, 20%, 60%, 100% {transform: rotate(.5deg);}
+    40% {transform: rotate(1deg);}
+    80% {transform: rotate(-.5deg);}
 }
 @keyframes wiggle2 {
-  0%, 10%, 50%, 100% {transform: rotate(1deg);}
-    30% {transform: rotate(2deg);}
+  0%, 10%, 50%, 100% {transform: rotate(.5deg);}
+    30% {transform: rotate(1.5deg);}
     70% {transform: rotate(-1deg);}
 }
 @keyframes wiggle3 {
   0%, 20%, 60% {transform: translate(0px, 0px);}
-    40% {transform: translate(4px, 5px);}
-    70% {transform: translate(6px, -3px);}
-    90% {transform: translate(10px, 3px);}
+    40% {transform: translate(2px, 3px);}
+    70% {transform: translate(4px, -2px);}
+    90% {transform: translate(5px, 2px);}
 }
 @keyframes wiggle4 {
   0%, 20%, 60%, 100% {transform: translate(0, 5px);}
@@ -53,6 +53,6 @@
 
 @keyframes wiggle6 {
   0%, 20%, 60%, 90% {transform: rotate(1deg);}
-    40% {transform: rotate(15deg);}
-    80% {transform: rotate(-10deg);}
+    40% {transform: rotate(3deg);}
+    80% {transform: rotate(-3deg);}
 }
