--- a/css/style.css
+++ b/css/style.css
@@ -881,6 +881,7 @@ body {
   }
   .main .main__container .main__content h1 {
     font-size: 3rem;
+    margin-top: 2rem;
   }
   .main .main__container .main__content h2 {
     margin-top: 0;
@@ -980,7 +981,7 @@ body {
   border-style: none;
   height: 50px;
   width: auto;
-  background: var(--clr-blue);
+  background: var(--clr-pink-dark);
   border-radius: 25px;
   border: 3px solid #fff;
 }
