--- a/scss/_-style.scss
+++ b/scss/_-style.scss
@@ -489,6 +489,7 @@ body {
 
         h1 {
           font-size: 3rem;
+          margin-top: 2rem;
         }
 
         h2 {
@@ -601,7 +602,7 @@ body {
           border-style: none;
           height: 50px;
           width: auto;
-          background: var(--clr-blue);
+          background: var(--clr-pink-dark);
           border-radius: 25px;
           border: 3px solid #fff;
 
