--- a/css/style.css
+++ b/css/style.css
@@ -953,6 +953,7 @@ body {
   text-align: center;
   border-radius: 3px;
   margin-top: 1rem;
+  padding: 0.2rem;
 }
 .portfolio .portfolio-container .portfolio-text .featured-title {
   font-weight: 800;
