--- a/scss/_-style.scss
+++ b/scss/_-style.scss
@@ -571,6 +571,7 @@ body {
         text-align: center;
         border-radius: 3px;
         margin-top: 1rem;
+        padding: .2rem;
       }
 
       .featured-title {
