--- a/css/style.css
+++ b/css/style.css
@@ -751,18 +751,20 @@ body {
   background-color: var(--clr-bg-main);
   z-index: 1;
   width: 100%;
-  max-width: 1300px;
+  max-width: 1500px;
   padding: 0 50px;
 }
 .main .main__container .main__img--container {
   flex-grow: 1;
 }
 .main .main__container .main__img--container svg {
+  position: relative;
   height: 100%;
-  width: 52vw;
-  max-width: 650px;
+  width: 42vw;
+  max-width: 750px;
   min-width: 250px;
   float: right;
+  top: -35px;
   z-index: 99;
 }
 .main .main__container .main__img--container svg .hashtag {
@@ -878,6 +880,7 @@ body {
     align-items: center;
     justify-content: center;
     width: 100%;
+    margin-left: 0;
   }
   .main .main__container .main__content h1 {
     font-size: 3rem;
