--- a/scss/_-style.scss
+++ b/scss/_-style.scss
@@ -620,7 +620,7 @@ body {
           }
 
           &:hover {
-            border: 3px solid black;
+            // border: 3px solid black;
             color: black;
             background-color: white;
 
