--- a/scss/_-style.scss
+++ b/scss/_-style.scss
@@ -625,7 +625,7 @@ body {
             background-color: white;
 
             a {
-              color: black;
+              color: var(--clr-background-light);
             }
           }
 
