--- a/scss/_-style.scss
+++ b/scss/_-style.scss
@@ -620,9 +620,8 @@ body {
           }
 
           &:hover {
-            // border: 3px solid black;
-            color: black;
-            background-color: white;
+            border: 3px solid black;
+            background-color: var(--clr-bg-main);
 
             a {
               color: var(--clr-nav-dark);
