--- a/css/style.css
+++ b/css/style.css
@@ -998,13 +998,9 @@ body {
   text-decoration: none;
 }
 .portfolio .portfolio-container .portfolio-text .button-container button:hover {
-  border: 3px solid black;
-  background-color: var(--clr-bg-main);
+  background-color: var(--clr-background-light);
+  transition: all 150ms ease;
 }
-.portfolio .portfolio-container .portfolio-text .button-container button:hover a {
-  color: var(--clr-nav-dark);
-}
-
 .footer__container {
   background-color: #101010;
   padding: 2rem 0;
