--- a/css/style.css
+++ b/css/style.css
@@ -998,8 +998,10 @@ body {
   text-decoration: none;
 }
 .portfolio .portfolio-container .portfolio-text .button-container button:hover {
-  background-color: var(--clr-background-light);
-  transition: all 150ms ease;
+  background-color: var(--clr-pink-btn);
+  transition: all 200ms ease;
+  transform: translate(2px, -2px);
+  box-shadow: -7px 7px 10px 1px #101010;
 }
 .footer__container {
   background-color: #101010;
