--- a/scss/_-style.scss
+++ b/scss/_-style.scss
@@ -459,7 +459,8 @@ body {
       border-radius: 30px;
       transition: all 200ms ease;
 
-      &:hover {
+      &:hover,
+      &:focus {
         background: rgba(45, 42, 50, 0.8);
         color: white;
       }
@@ -625,7 +626,8 @@ body {
             text-decoration: none;
           }
 
-          &:hover {
+          &:hover,
+          &:focus {
             // border: 3px solid black;
             background-color: var(--clr-pink-btn);
             transition: all 200ms ease;
@@ -708,7 +710,8 @@ body {
   margin-bottom: 0.5rem;
 }
 
-.footer__link--items a:hover {
+.footer__link--items a:hover,
+.footer__link--items a:focus {
   color: var(--clr-pink-dark);
   transition: 300ms ease;
 }
@@ -744,7 +747,8 @@ body {
   width: 240px;
 }
 
-.social__icon--link:hover {
+.social__icon--link:hover,
+.social__icon--link:focus {
   transform: scale(130%);
   color: #fff;
   transition:  all 175ms ease;
