--- a/css/style.css
+++ b/css/style.css
@@ -897,10 +897,25 @@ body {
     margin-top: 3rem;
   }
 }
+.wave-container {
+  position: relative;
+  height: 100%;
+  width: 100%;
+  background-color: blue;
+  margin: 0;
+  padding: 0;
+  object-fit: cover;
+}
+
+.wave {
+  position: absolute;
+}
+
 .portfolio {
   height: 100%;
   background-color: var(--clr-nav-dark);
-  clip-path: polygon(50% 3%, 55% 0, 100% 0, 100% 100%, 0 100%, 0 0, 45% 0);
+  padding-top: 0;
+  margin-top: 0;
 }
 
 .portfolio {
