--- a/css/style.css
+++ b/css/style.css
@@ -899,16 +899,23 @@ body {
 }
 .wave-container {
   position: relative;
-  height: 100%;
-  width: 100%;
+  height: 10rem;
+  width: 100vw;
   background-color: blue;
   margin: 0;
   padding: 0;
-  object-fit: cover;
 }
 
 .wave {
   position: absolute;
+  bottom: -10px;
+  right: 0;
+  left: 0;
+  height: auto;
+  width: 100%;
+}
+.wave path {
+  width: 100vw;
 }
 
 .portfolio {
@@ -928,7 +935,7 @@ body {
 .portfolio h1 {
   color: white;
   font-size: 4rem;
-  margin-top: 10rem;
+  margin-top: 1rem;
   letter-spacing: -0.075rem;
   text-align: center;
 }
