--- a/scss/_-style.scss
+++ b/scss/_-style.scss
@@ -519,16 +519,24 @@ body {
 
 .wave-container {
   position: relative;
-  height: 100%;
-  width: 100%;
+  height: 10rem;
+  width: 100vw;
   background-color: blue;
   margin: 0;
   padding: 0;
-  object-fit: cover;
 }
 
 .wave {
   position: absolute;
+  bottom: -10px;
+  // top: 0;
+  right: 0;
+  left: 0;
+  height: auto;
+  width: 100%;
+  path {
+    width: 100vw;
+  }
 
 }
 
@@ -549,7 +557,7 @@ body {
   h1 {
     color: white;
     font-size: 4rem;
-    margin-top: 10rem;
+    margin-top: 1rem;
     letter-spacing: -0.075rem;
     text-align: center;
   }
