--- a/css/style.css
+++ b/css/style.css
@@ -452,6 +452,19 @@ body {
     transform: rotate(-3deg);
   }
 }
+.form-container {
+  width: 100vw;
+  height: calc(100vh - 80px);
+  display: grid;
+  place-content: center;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 3em;
+}
+
 :root {
   --clr-bg-main: #ffd9ce;
   --clr-nav-bg: rgb(45, 42, 50);
