--- a/css/style.css
+++ b/css/style.css
@@ -463,6 +463,22 @@ form {
   display: flex;
   flex-direction: column;
   gap: 3em;
+  text-align: center;
+}
+form label {
+  font-size: 2em;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+form label input {
+  margin-top: 1em;
+}
+form label textarea {
+  margin-top: 1em;
+}
+form h2 {
+  font-size: 3rem;
 }
 
 :root {
