--- a/css/style.css
+++ b/css/style.css
@@ -467,15 +467,33 @@ form {
 }
 form label {
   font-size: 2em;
+  font-weight: 200;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  margin-top: 1em;
 }
 form label input {
-  margin-top: 1em;
+  margin-top: 0.5em;
+  border: 1px solid #101010;
+  border-radius: 5px;
+  transition: transform 200ms ease, box-shadow 200ms ease;
+}
+form label input:focus {
+  outline: none;
+  box-shadow: -4px 4px 1px 0;
+  transform: translate(4px, -4px);
 }
 form label textarea {
-  margin-top: 1em;
+  margin-top: 0.5em;
+  border: 1px solid #101010;
+  border-radius: 5px;
+  transition: transform 200ms ease, box-shadow 200ms ease;
+}
+form label textarea:focus {
+  outline: none;
+  box-shadow: -4px 4px 1px 0;
+  transform: translate(4px, -4px);
 }
 form h2 {
   font-size: 3rem;
