--- a/scss/_form.scss
+++ b/scss/_form.scss
@@ -13,16 +13,38 @@ form {
 
   label {
     font-size: 2em;
+    font-weight: 200;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    margin-top: 1em;
 
     input {
-      margin-top: 1em;
+      margin-top: .5em;
+      border: 1px solid #101010;
+      border-radius: 5px;
+      transition: transform 200ms ease,
+      box-shadow 200ms ease;
+
+      &:focus {
+        outline: none;
+        box-shadow: -4px 4px 1px 0;
+        transform: translate(4px, -4px);
+      }
     }
 
     textarea {
-      margin-top: 1em;
+      margin-top: .5em;
+      border: 1px solid #101010;
+      border-radius: 5px;
+      transition: transform 200ms ease,
+      box-shadow 200ms ease;
+
+      &:focus {
+        outline: none;
+        box-shadow: -4px 4px 1px 0;
+        transform: translate(4px, -4px);
+      }
     }
   }
 
