--- a/scss/_form.scss
+++ b/scss/_form.scss
@@ -18,13 +18,17 @@ form {
     flex-direction: column;
     justify-content: space-between;
     margin-top: 1em;
+    align-items: center;
 
     input {
+      background-color: ;
+      font-size: .75em;
+      max-width: 100vw;
       margin-top: .5em;
       border: 1px solid #101010;
       border-radius: 5px;
       transition: transform 200ms ease,
-      box-shadow 200ms ease;
+        box-shadow 200ms ease;
 
       &:focus {
         outline: none;
@@ -34,11 +38,13 @@ form {
     }
 
     textarea {
+      max-width: 100vw;
+      font-size: .75em;
       margin-top: .5em;
       border: 1px solid #101010;
       border-radius: 5px;
       transition: transform 200ms ease,
-      box-shadow 200ms ease;
+        box-shadow 200ms ease;
 
       &:focus {
         outline: none;
@@ -50,5 +56,23 @@ form {
 
   h2 {
     font-size: 3rem;
+  }
+
+  button {
+    margin: auto;
+    padding: 1em 4em;
+    margin-top: .5em;
+    border: 1px solid #101010;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: 
+      transform 200ms ease,
+      box-shadow 200ms ease;
+
+    &:hover {
+        outline: none;
+        box-shadow: -4px 4px 1px 0;
+        transform: translate(4px, -4px);
+      }
   }
 }
