--- a/css/style.css
+++ b/css/style.css
@@ -467,7 +467,13 @@ form {
 }
 form h2 {
   font-size: 3rem;
-  margin: 0 1em;
+  background-color: #ffe5dd;
+  padding: 1em;
+  border-radius: 100px;
+  font-weight: 200;
+  letter-spacing: -0.1rem;
+  line-height: 0.9;
+  margin: 1em 1em 0 1em;
   max-width: 100vw;
 }
 form label {
@@ -480,37 +486,41 @@ form label {
   align-items: center;
 }
 form label input {
-  background-color: #ffede8;
+  background-color: #ffe5dd;
   font-size: 0.75em;
   max-width: 100vw;
   margin-top: 0.5em;
   border: 1px solid #101010;
   border-radius: 5px;
-  transition: transform 200ms ease, box-shadow 200ms ease;
+  transition: transform 200ms ease, box-shadow 200ms ease, background-color 300ms ease;
 }
 form label input:focus {
+  background-color: #ffede8;
   outline: none;
   box-shadow: -4px 4px 1px 0;
   transform: translate(4px, -4px);
 }
 form label textarea {
+  background-color: #ffe5dd;
   max-width: 100vw;
   font-size: 0.75em;
   margin-top: 0.5em;
   border: 1px solid #101010;
   border-radius: 5px;
-  transition: transform 200ms ease, box-shadow 200ms ease;
+  transition: transform 200ms ease, box-shadow 200ms ease, background-color 300ms ease;
 }
 form label textarea:focus {
+  background-color: #ffede8;
   outline: none;
   box-shadow: -4px 4px 1px 0;
   transform: translate(4px, -4px);
 }
 form button {
+  background-color: white;
   margin: auto;
   padding: 1em 4em;
   margin-top: 0.5em;
-  border: 1px solid #101010;
+  border: 2px solid #101010;
   border-radius: 5px;
   cursor: pointer;
   transition: transform 200ms ease, box-shadow 200ms ease;
