--- a/scss/_form.scss
+++ b/scss/_form.scss
@@ -13,7 +13,13 @@ form {
  
   h2 {
     font-size: 3rem;
-    margin: 0 1em;
+    background-color: lighten(#ffd9ce, 3%);
+    padding: 1em;
+    border-radius: 100px;
+    font-weight: 200;
+    letter-spacing: -0.1rem;
+    line-height: 0.9;
+    margin: 1em 1em 0 1em;
     max-width: 100vw;
   }
 
@@ -27,16 +33,19 @@ form {
     align-items: center;
 
     input {
-      background-color: lighten(#ffd9ce, 5%);
+      background-color: lighten(#ffd9ce, 3%);
       font-size: .75em;
       max-width: 100vw;
       margin-top: .5em;
       border: 1px solid #101010;
       border-radius: 5px;
-      transition: transform 200ms ease,
-        box-shadow 200ms ease;
+      transition: 
+        transform 200ms ease,
+        box-shadow 200ms ease,
+        background-color 300ms ease;
 
       &:focus {
+        background-color: lighten(#ffd9ce, 5%);
         outline: none;
         box-shadow: -4px 4px 1px 0;
         transform: translate(4px, -4px);
@@ -44,15 +53,19 @@ form {
     }
 
     textarea {
+      background-color: lighten(#ffd9ce, 3%);
       max-width: 100vw;
       font-size: .75em;
       margin-top: .5em;
       border: 1px solid #101010;
       border-radius: 5px;
-      transition: transform 200ms ease,
-        box-shadow 200ms ease;
+      transition: 
+        transform 200ms ease,
+        box-shadow 200ms ease,
+        background-color 300ms ease;
 
       &:focus {
+        background-color: lighten(#ffd9ce, 5%);
         outline: none;
         box-shadow: -4px 4px 1px 0;
         transform: translate(4px, -4px);
@@ -62,10 +75,11 @@ form {
 
 
   button {
+    background-color: white;
     margin: auto;
     padding: 1em 4em;
     margin-top: .5em;
-    border: 1px solid #101010;
+    border: 2px solid #101010;
     border-radius: 5px;
     cursor: pointer;
     transition: 
