--- a/scss/_form.scss
+++ b/scss/_form.scss
@@ -8,17 +8,19 @@
 form {
   display: flex;
   flex-direction: column;
-  gap: 3em;
+  gap: 1em;
   text-align: center;
- 
+  margin-bottom: 2em;
+
   h2 {
+    font-family: ;
     font-size: 3rem;
     background-color: lighten(#ffd9ce, 3%);
     padding: 1em;
     border-radius: 100px;
-    font-weight: 200;
-    letter-spacing: -0.1rem;
-    line-height: 0.9;
+    font-weight: 900;
+    letter-spacing: -0.05rem;
+    line-height: 1;
     margin: 1em 1em 0 1em;
     max-width: 100vw;
   }
@@ -39,7 +41,7 @@ form {
       margin-top: .5em;
       border: 1px solid #101010;
       border-radius: 5px;
-      transition: 
+      transition:
         transform 200ms ease,
         box-shadow 200ms ease,
         background-color 300ms ease;
@@ -59,7 +61,7 @@ form {
       margin-top: .5em;
       border: 1px solid #101010;
       border-radius: 5px;
-      transition: 
+      transition:
         transform 200ms ease,
         box-shadow 200ms ease,
         background-color 300ms ease;
@@ -75,21 +77,23 @@ form {
 
 
   button {
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.7);
     margin: auto;
     padding: 1em 4em;
     margin-top: .5em;
     border: 2px solid #101010;
     border-radius: 5px;
     cursor: pointer;
-    transition: 
+    transition:
       transform 200ms ease,
-      box-shadow 200ms ease;
+      box-shadow 200ms ease,
+      background-color 300ms ease;
 
     &:hover {
-        outline: none;
-        box-shadow: -4px 4px 1px 0;
-        transform: translate(4px, -4px);
-      }
+      outline: none;
+      box-shadow: -4px 4px 1px 0;
+      transform: translate(4px, -4px);
+      background-color: rgba(255, 255, 255);
+    }
   }
 }
