--- a/scss/_form.scss
+++ b/scss/_form.scss
@@ -13,7 +13,7 @@ form {
   margin-bottom: 2em;
 
   h2 {
-    font-family: ;
+    font-family: 'Montserrat';
     font-size: 3rem;
     background-color: lighten(#ffd9ce, 3%);
     padding: 1em;
@@ -26,8 +26,9 @@ form {
   }
 
   label {
-    font-size: 2em;
-    font-weight: 200;
+    font-family: 'Montserrat';
+    font-size: 1em;
+    font-weight: 300;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -36,7 +37,7 @@ form {
 
     input {
       background-color: lighten(#ffd9ce, 3%);
-      font-size: .75em;
+      font-size: 1.5em;
       max-width: 100vw;
       margin-top: .5em;
       border: 1px solid #101010;
@@ -57,7 +58,10 @@ form {
     textarea {
       background-color: lighten(#ffd9ce, 3%);
       max-width: 100vw;
-      font-size: .75em;
+      width: 100%;
+      height: 200px;
+      resize: none;
+      font-size: 1.5em;
       margin-top: .5em;
       border: 1px solid #101010;
       border-radius: 5px;
