--- a/css/style.css
+++ b/css/style.css
@@ -823,6 +823,7 @@ body {
   align-items: center;
   height: 70px;
   margin-bottom: 50px;
+  z-index: 2;
 }
 .main .arrow-container a {
   color: #101010;
@@ -988,6 +989,7 @@ body {
   height: 10rem;
   margin: 0;
   padding: 0;
+  z-index: 1;
 }
 
 .wave {
