--- a/scss/_-style.scss
+++ b/scss/_-style.scss
@@ -323,6 +323,7 @@ body {
     align-items: center;
     height: 70px;
     margin-bottom: 50px;
+    z-index: 2;
 
     a {
       color: #101010;
@@ -523,6 +524,7 @@ body {
   height: 10rem;
   margin: 0;
   padding: 0;
+  z-index: 1;
 }
 
 .wave {
