--- a/scss/_-style.scss
+++ b/scss/_-style.scss
@@ -161,6 +161,7 @@ body {
 
         .navbar__link {
           color: #fff;
+          font-weight: 300;
           display: flex;
           align-items: center;
           justify-content: center;
