fixed mobile layout

--- a/css/style.css
+++ b/css/style.css
@@ -574,6 +574,10 @@ html {
   scroll-behavior: smooth;
 }
 
+* {
+  outline: 1px solid #f00 !important;
+}
+
 body {
   background-color: var(--clr-bg-main);
 }
@@ -1031,12 +1035,11 @@ body {
   text-align: center;
 }
 .portfolio .portfolio-container {
-  margin-top: 4rem;
+  margin-top: 2rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-bottom: 4rem;
   padding: 0;
   height: auto;
 }
@@ -1048,10 +1051,7 @@ body {
   filter: drop-shadow(-10px 10px 4px rgba(0, 0, 0, 0.5));
 }
 .portfolio .portfolio-container .portfolio-text {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-around;
+  height: 400px;
 }
 .portfolio .portfolio-container .portfolio-text .inner {
   display: flex;
@@ -1079,10 +1079,14 @@ body {
   color: #fff;
   font-size: 34px;
   letter-spacing: 0;
+  text-align: center;
   margin: 0.5rem 0;
 }
 .portfolio .portfolio-container .portfolio-text .featured-desc {
-  display: none;
+  text-align: center;
+  width: 50%;
+  min-width: 340px;
+  background: pink;
   font-weight: 400;
   letter-spacing: 0.045em;
   line-height: 1.645;
