--- a/scss/_-style.scss
+++ b/scss/_-style.scss
@@ -39,9 +39,9 @@ html {
   scroll-behavior: smooth;
 }
 
-* {
-  outline: 1px solid #f00 !important;
-}
+// * {
+//   outline: 1px solid #f00 !important;
+// }
 
 body {
   background-color: var(--clr-bg-main);
