--- a/css/style.css
+++ b/css/style.css
@@ -1054,8 +1054,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  margin-top: 5px;
-  height: 170px;
+  margin-top: 1em;
   width: 100%;
 }
 .portfolio .portfolio-container .portfolio-text .subtitle {
