--- a/scss/_-style.scss
+++ b/scss/_-style.scss
@@ -595,8 +595,7 @@ body {
         flex-direction: column;
         align-items: center;
         justify-content: space-between;
-        margin-top: 5px;
-        height: 170px;
+        margin-top: 1em;
         width: 100%;
       }
 
