--- a/scss/_-style.scss
+++ b/scss/_-style.scss
@@ -685,6 +685,7 @@ body {
   justify-content: center;
   align-items: center;
   height: 330px;
+  z-index: 99;
 }
 
 #footer__logo {
@@ -700,6 +701,7 @@ body {
 }
 
 .footer__links {
+  z-index: 99;
   width: 80%;
   max-width: 1000px;
   display: flex;
