--- a/scss/_-style.scss
+++ b/scss/_-style.scss
@@ -96,9 +96,9 @@ body {
     height: 80px;
     z-index: 2;
     width: 100%;
-    max-width: 1300px;
+
     margin: 0 auto;
-    padding: 0 50px;
+    padding: 0 ;
 
     #navbar__logo {
       position: relative;
@@ -200,7 +200,6 @@ body {
       height: 80px;
       z-index: 99;
       width: 100vw;
-      max-width: 1300px;
       padding: 0;
 
       #navbar__logo {
