--- a/scss/_-style.scss
+++ b/scss/_-style.scss
@@ -183,6 +183,11 @@ body {
         align-items: center;
         padding: 0 1rem 0 1rem;
         width: 100%;
+
+        .last-button {
+          padding-right: 0;
+          margin: 0;
+        }
       }
 
     }
