--- a/scss/_-style.scss
+++ b/scss/_-style.scss
@@ -96,9 +96,9 @@ body {
     height: 80px;
     z-index: 2;
     width: 100%;
-
+    max-width: 1400px;
     margin: 0 auto;
-    padding: 0 ;
+    padding: 0;
 
     #navbar__logo {
       position: relative;
