--- a/css/style.css
+++ b/css/style.css
@@ -617,6 +617,7 @@ body {
   font-size: 1.2rem;
   position: sticky;
   top: 0;
+  padding: 0 55px;
   z-index: 99;
 }
 .navbar .navbar__container {
