--- a/css/style.css
+++ b/css/style.css
@@ -574,6 +574,10 @@ html {
   scroll-behavior: smooth;
 }
 
+* {
+  outline: 1px solid #f00 !important;
+}
+
 body {
   background-color: var(--clr-bg-main);
 }
@@ -616,8 +620,8 @@ body {
   align-items: center;
   font-size: 1.2rem;
   position: sticky;
-  top: 0;
   padding: 0 55px;
+  top: 0;
   z-index: 99;
 }
 .navbar .navbar__container {
@@ -715,6 +719,7 @@ body {
   .navbar {
     position: sticky;
     z-index: 99;
+    padding: 0;
   }
   .navbar .navbar__container {
     align-items: center;
