--- a/scss/_-style.scss
+++ b/scss/_-style.scss
@@ -39,9 +39,9 @@ html {
   scroll-behavior: smooth;
 }
 
-* {
-  outline: 1px solid #f00 !important;
-}
+// * {
+//   outline: 1px solid #f00 !important;
+// }
 
 body {
   background-color: var(--clr-bg-main);
@@ -363,7 +363,7 @@ body {
         height: 100%;
         width: 42vw;
         max-width: 750px;
-        min-width: 250px;
+        min-width: 350px;
         float: right;
         top: -35px;
         z-index: 99;
