--- a/scss/_-style.scss
+++ b/scss/_-style.scss
@@ -39,9 +39,9 @@ html {
   scroll-behavior: smooth;
 }
 
-// * {
-//   outline: 1px solid #f00 !important;
-// }
+* {
+  outline: 1px solid #f00 !important;
+}
 
 body {
   background-color: var(--clr-bg-main);
@@ -709,10 +709,10 @@ body {
 
 .footer__links {
   z-index: 99;
-  width: 80%;
-  max-width: 1000px;
+  width: 100%;
+  max-width: 1400px;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   line-height: 0.9;
 }
 
@@ -767,10 +767,10 @@ body {
 .social__media--wrap {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-end;
   flex-direction: column;
-  width: 50%;
-  float: right;
+  width: 100%;
+  // float: right;
   height: 100%;
   max-width: 1000px;
   margin: 0 auto;
@@ -780,8 +780,12 @@ body {
 .social__icons {
   display: flex;
   justify-content: center;
-  align-items: center;
-  width: 240px;
+  align-items: flex-end;
+  width: auto;
+
+  .last-button {
+    padding-right: 0;
+  }
 }
 
 .social__icon--link:hover,
@@ -794,7 +798,6 @@ body {
 .social__logo {
   color: var(--clr-bg-main);
   justify-self: flex-start;
-  margin-left: 20px;
   cursor: pointer;
   text-decoration: none;
   font-size: 2rem;
