--- a/scss/_-style.scss
+++ b/scss/_-style.scss
@@ -183,7 +183,7 @@ body {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding: 0 1rem 0 1rem;
+        padding: 0;
         width: 100%;
 
         .last-button {
@@ -686,7 +686,7 @@ body {
 
 .footer__container {
   background-color: #101010;
-  padding: 2rem 0;
+  padding: 2rem 55px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -813,6 +813,15 @@ body {
   .footer__link--items {
     align-items: center;
     text-align: center;
+    width: 100%;
+    margin-bottom: 1rem;
+  }
+
+  .footer-links-wrap {
+
+    a {
+      padding: 0 0.5rem;
+    }
   }
 
   .footer__link--wrapper {
@@ -821,5 +830,13 @@ body {
 
   .social__media--wrap {
     width: 100%;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    background-color: blue;
+
+    .last-button {
+      padding: 1rem;
+    }
   }
 }
