--- a/scss/_-style.scss
+++ b/scss/_-style.scss
@@ -236,6 +236,11 @@ body {
           .button {
             width: 20%;
           }
+
+          .last-button {
+            padding:2rem 1rem;
+            margin-left: 1rem;
+          }
         }
 
         .navbar__item {
