--- a/css/style.css
+++ b/css/style.css
@@ -754,6 +754,10 @@ body {
   .navbar .navbar__container .navbar__menu .navbar__btn .button {
     width: 20%;
   }
+  .navbar .navbar__container .navbar__menu .navbar__btn .last-button {
+    padding: 2rem 1rem;
+    margin-left: 1rem;
+  }
   .navbar .navbar__container .navbar__menu .navbar__item {
     width: 100%;
     height: 100%;
