--- a/css/style.css
+++ b/css/style.css
@@ -1172,8 +1172,17 @@ body {
   flex-direction: column;
   align-items: flex-start;
   text-align: left;
-  width: 160px;
+  width: 100%;
   box-sizing: border-box;
+}
+
+.footer-links-wrap {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  height: 100%;
+  align-items: flex-start;
+  justify-content: center;
 }
 
 .footer__link--items h2 {
@@ -1245,7 +1254,7 @@ body {
   margin-bottom: 16px;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 960px) {
   .footer__links {
     flex-direction: column;
   }
@@ -1257,6 +1266,9 @@ body {
     margin-bottom: 1rem;
   }
 
+  .footer-links-wrap {
+    align-items: center;
+  }
   .footer-links-wrap a {
     padding: 0 0.5rem;
   }
