--- a/scss/_-style.scss
+++ b/scss/_-style.scss
@@ -731,8 +731,17 @@ body {
   flex-direction: column;
   align-items: flex-start;
   text-align: left;
-  width: 160px;
+  width: 100%;
   box-sizing: border-box;
+}
+
+.footer-links-wrap {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  height: 100%;
+  align-items: flex-start;
+  justify-content: center;
 }
 
 .footer__link--items {
@@ -810,7 +819,7 @@ body {
   margin-bottom: 16px;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 960px) {
   .footer__links {
     flex-direction: column;
   }
@@ -823,7 +832,8 @@ body {
   }
 
   .footer-links-wrap {
-
+    align-items: center;
+    
     a {
       padding: 0 0.5rem;
     }
