--- a/scss/_-style.scss
+++ b/scss/_-style.scss
@@ -39,9 +39,9 @@ html {
   scroll-behavior: smooth;
 }
 
-* {
-  outline: 1px solid #f00 !important;
-}
+// * {
+//   outline: 1px solid #f00 !important;
+// }
 
 body {
   background-color: var(--clr-bg-main);
@@ -729,7 +729,7 @@ body {
 .footer__link--items {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   text-align: left;
   width: 100%;
   box-sizing: border-box;
@@ -740,7 +740,7 @@ body {
   flex-direction: column;
   gap: 0.5rem;
   height: 100%;
-  align-items: flex-start;
+  align-items: center;
   justify-content: center;
 }
 
@@ -833,7 +833,7 @@ body {
 
   .footer-links-wrap {
     align-items: center;
-    
+
     a {
       padding: 0 0.5rem;
     }
@@ -848,7 +848,6 @@ body {
     justify-content: center;
     align-items: center;
     display: flex;
-    background-color: blue;
 
     .last-button {
       padding: 1rem;
