--- a/css/style.css
+++ b/css/style.css
@@ -469,12 +469,12 @@ form {
 form h2 {
   font-family: "Montserrat";
   font-size: 3rem;
-  background-color: #ffe5dd;
+  background-color: #fff1ed;
   padding: 1em;
   border-radius: 100px;
   font-weight: 900;
   letter-spacing: -0.05rem;
-  line-height: 1;
+  line-height: 0.9;
   margin: 1em 1em 0 1em;
   max-width: 100vw;
 }
@@ -498,7 +498,7 @@ form label input {
   transition: transform 200ms ease, box-shadow 200ms ease, background-color 300ms ease;
 }
 form label input:focus {
-  background-color: #ffede8;
+  background-color: #fff1ed;
   outline: none;
   box-shadow: -4px 4px 1px 0;
   transform: translate(4px, -4px);
@@ -516,13 +516,13 @@ form label textarea {
   transition: transform 200ms ease, box-shadow 200ms ease, background-color 300ms ease;
 }
 form label textarea:focus {
-  background-color: #ffede8;
+  background-color: #fff1ed;
   outline: none;
   box-shadow: -4px 4px 1px 0;
   transform: translate(4px, -4px);
 }
 form button {
-  background-color: rgba(255, 255, 255, 0.7);
+  background-color: #fff1ed;
   margin: auto;
   padding: 1em 4em;
   margin-top: 0.5em;
