--- a/scss/_form.scss
+++ b/scss/_form.scss
@@ -15,12 +15,12 @@ form {
   h2 {
     font-family: 'Montserrat';
     font-size: 3rem;
-    background-color: lighten(#ffd9ce, 3%);
+    background-color: lighten(#ffd9ce, 6%);
     padding: 1em;
     border-radius: 100px;
     font-weight: 900;
     letter-spacing: -0.05rem;
-    line-height: 1;
+    line-height: .9;
     margin: 1em 1em 0 1em;
     max-width: 100vw;
   }
@@ -48,7 +48,7 @@ form {
         background-color 300ms ease;
 
       &:focus {
-        background-color: lighten(#ffd9ce, 5%);
+        background-color: lighten(#ffd9ce, 6%);
         outline: none;
         box-shadow: -4px 4px 1px 0;
         transform: translate(4px, -4px);
@@ -71,7 +71,7 @@ form {
         background-color 300ms ease;
 
       &:focus {
-        background-color: lighten(#ffd9ce, 5%);
+        background-color: lighten(#ffd9ce, 6%);
         outline: none;
         box-shadow: -4px 4px 1px 0;
         transform: translate(4px, -4px);
@@ -81,7 +81,7 @@ form {
 
 
   button {
-    background-color: rgba(255, 255, 255, 0.7);
+    background-color: lighten(#ffd9ce, 6%);
     margin: auto;
     padding: 1em 4em;
     margin-top: .5em;
