--- a/css/style.css
+++ b/css/style.css
@@ -574,6 +574,10 @@ html {
   scroll-behavior: smooth;
 }
 
+* {
+  outline: 1px solid #f00 !important;
+}
+
 body {
   background-color: var(--clr-bg-main);
 }
