--- a/css/style.css
+++ b/css/style.css
@@ -465,6 +465,7 @@ form {
   gap: 1em;
   text-align: center;
   margin-bottom: 2em;
+  width: 60vw;
 }
 form h2 {
   font-family: "Montserrat";
@@ -491,7 +492,6 @@ form label {
 form label input {
   background-color: #ffe5dd;
   font-size: 1.5em;
-  max-width: 100vw;
   margin-top: 0.5em;
   border: 1px solid #101010;
   border-radius: 5px;
@@ -505,7 +505,7 @@ form label input:focus {
 }
 form label textarea {
   background-color: #ffe5dd;
-  max-width: 100vw;
+  max-width: 90vw;
   width: 100%;
   height: 200px;
   resize: none;
@@ -538,6 +538,14 @@ form button:hover {
   background-color: white;
 }
 
+@media only screen and (max-width: 900px) {
+  form {
+    width: 90vw;
+  }
+  form h2 {
+    font-size: 2rem;
+  }
+}
 :root {
   --clr-bg-main: #ffd9ce;
   --clr-nav-bg: rgb(45, 42, 50);
