--- a/scss/_form.scss
+++ b/scss/_form.scss
@@ -11,6 +11,7 @@ form {
   gap: 1em;
   text-align: center;
   margin-bottom: 2em;
+  width: 60vw;
 
   h2 {
     font-family: 'Montserrat';
@@ -38,7 +39,6 @@ form {
     input {
       background-color: lighten(#ffd9ce, 3%);
       font-size: 1.5em;
-      max-width: 100vw;
       margin-top: .5em;
       border: 1px solid #101010;
       border-radius: 5px;
@@ -57,7 +57,7 @@ form {
 
     textarea {
       background-color: lighten(#ffd9ce, 3%);
-      max-width: 100vw;
+      max-width: 90vw;
       width: 100%;
       height: 200px;
       resize: none;
@@ -98,6 +98,15 @@ form {
       box-shadow: -4px 4px 1px 0;
       transform: translate(4px, -4px);
       background-color: rgba(255, 255, 255);
+    }
+  }
+}
+
+@media only screen and (max-width: 900px) {
+  form {
+    width: 90vw;
+    h2 {
+      font-size: 2rem;
     }
   }
 }
