--- a/scss/_-style.scss
+++ b/scss/_-style.scss
@@ -741,7 +741,7 @@ body {
   gap: 0.5rem;
   height: 100%;
   align-items: center;
-  justify-content: center;
+  justify-content: flex;
 }
 
 .footer__link--items {
@@ -756,6 +756,7 @@ body {
 
 .footer__link--items a {
   color: var(--clr-bg-main);
+  font-size: .8rem;
   text-decoration: none;
   margin-bottom: 0.5rem;
 }
