--- a/scss/_-style.scss
+++ b/scss/_-style.scss
@@ -741,7 +741,7 @@ body {
   gap: 0.5rem;
   height: 100%;
   align-items: center;
-  justify-content: flex;
+  justify-content: center;
 }
 
 .footer__link--items {
