--- a/scss/_-style.scss
+++ b/scss/_-style.scss
@@ -729,7 +729,7 @@ body {
 .footer__link--items {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   text-align: left;
   width: 100%;
   box-sizing: border-box;
@@ -740,7 +740,7 @@ body {
   flex-direction: column;
   gap: 0.5rem;
   height: 100%;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
 }
 
