--- a/scss/_-style.scss
+++ b/scss/_-style.scss
@@ -749,7 +749,7 @@ body {
   h2 {
     margin-top: 1rem;
     font-weight: 300;
-    color: #fff;
+    color: #ffffff;
     font-size: .8rem;
   }
 }
