--- a/css/style.css
+++ b/css/style.css
@@ -1192,7 +1192,7 @@ body {
 .footer__link--items h2 {
   margin-top: 1rem;
   font-weight: 300;
-  color: #fff;
+  color: #a6a6a6;
   font-size: 0.8rem;
 }
 
